# conic-subdivision

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
conis/core/: CMakeLists.txt  scene.cpp  scene.hpp
conis/core/conics/: conic.cpp  conic.hpp  conicfitter.cpp  conicfitter.hpp
conis/core/curve/: curve.cpp  curve.hpp  curveloader.cpp  curveloader.hpp  curvepresetfactory.cpp  curvepresetfactory.hpp  curvesaver.hpp
conis/core/curve/refinement/: normalrefinementsettings.hpp  normalrefiner.hpp
conis/core/curve/subdivision/: conicsubdivider.cpp  conicsubdivider.hpp  subdivisionsettings.hpp
conis/gui/: mainwindow.cpp  mainwindow.hpp  stylepresets.hpp  viewsettings.hpp
conis/test/: CMakeLists.txt
curves/: ExLetG_sub0.txt  ExLetG_sub6_LN.txt  ExStar_sub0.txt  ExStar_sub6.txt  ExStep_sub6_LN.txt  circle0.txt  circle1.txt  circle2.txt  ex6_sub0E  example1.txt  example10_sub6_adjN.txt  example11.txt  example12.txt  example13.txt  example1_sub6.txt  example1_sub6_adjN.txt  example2_sub6.txt  example4.txt  example4_sub6_adjN.txt  example5.txt  example5_sub6.txt  example5_sub6_adjN.txt  example6.txt  example6_sub6.txt  example6_sub6_adjN.txt  example6_sub6_adjN_v3B.txt  example6_sub6_adjN_v3E.txt  example6_sub6_adjN_v3F.txt  example8_sub6.txt  example8_sub6_adjN.txt  example9.txt  lG2.txt  tau_example.txt  tau_sub0.txt  tau_sub6_tau150.txt  tau_sub6_tau200.txt  tst.txt
curves/test/: 5pointOpenCircle.txt  ExLetG_sub6.txt  ExStep_sub0.txt  ExStep_sub6.txt  circle3.txt  circle4.txt  deleteMe.txt  ex6_sub0.txt  ex6_sub0D.txt  ex6_sub0F  example10.txt  example10_sub6.txt  example11_sub6_SC_adjN.txt  example12_sub6.txt  example13_sub6.txt  example2.txt  example3.txt  example3_sub6.txt  example3_sub6_adjN.txt  example4_sub6.txt  example6_sub6_adjN_v2.txt  example6_sub6_adjN_v3.txt  example6_sub6_adjN_v3C.txt  example6_sub6_adjN_v3D.txt  example7.txt  example7_sub6.txt  example7_sub6_adjN.txt  example8.txt  example8_sub6_Infl.txt  example9_sub6_SC_adjN.txt  tau_example2.txt  tau_sub6_tau1.txt  tau_sub6_tau10.txt  tau_sub6_tau100.txt  tau_sub6_tau1000.txt  tau_sub6_tau50.txt
docker/: Dockerfile
resources/: resources.qrc
resources/shaders/: conic.frag  dashed.frag  flat.frag  flat.vert  normals_calc.geom  polyline.vert  polyline_normals.geom
scripts/: build.sh  clean.sh  docker_test.sh  format.sh
src/: conic.cpp  conic.h  conicfitter.cpp  conicfitter.h  conicfitter_unit.cpp  conicfitter_unit.h  main.cpp  mainview.cpp  mainview.h  mainview.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  presets.cpp  presets.h  resources.qrc  settings.h  settings.hpp  shadertypes.h  shadertypes.hpp  subdivisioncurve.cpp  subdivisioncurve.h
src/conis/: main.cpp
src/core/: CMakeLists.txt  conic.cpp  conic.hpp  conicfitter.cpp  conicfitter.hpp  conicfitter_unit.cpp  conicfitter_unit.hpp  conicpresets.cpp  conicpresets.hpp  curve.cpp  curve.hpp  scene.cpp  scene.hpp  scenelistener.hpp  settings.hpp  subdivisioncurve.cpp  subdivisioncurve.hpp  vector.hpp
src/core/conics/: conic.cpp  conic.hpp  conicfitter.cpp  conicfitter.hpp  conicfitter2.cpp  conicfitter2.hpp  conicfitter_unit.cpp  conicfitter_unit.hpp  conicpresetfactory.cpp  conicpresetfactory.hpp  conicpresets.cpp  conicpresets.hpp
src/core/curve/: curve.cpp  curve.hpp  curveloader.cpp  curveloader.hpp  curvepresetfactory.cpp  curvepresetfactory.hpp  curvesaver.cpp  curvesaver.hpp
src/core/curve/refinement/: normalrefinementsettings.hpp  normalrefiner.cpp  normalrefiner.hpp
src/core/curve/subdivision/: conicsubdivider.cpp  conicsubdivider.hpp  subdivider.hpp  subdivisionsettings.hpp
src/core/include/conis/core/: coniscurve.hpp  listener.hpp  vector.hpp
src/core/include/conis/core/conics/: conic.hpp  conicfitter.hpp
src/core/include/conis/core/curve/: curvaturetype.hpp  curve.hpp  curveloader.hpp  curvesaver.hpp
src/core/include/conis/core/curve/refinement/: normalrefinementsettings.hpp  normalrefiner.hpp
src/core/include/conis/core/curve/subdivision/: conicsubdivider.hpp  subdivisionsettings.hpp
src/core/refinement/: normalrefiner.cpp  normalrefiner.hpp
src/core/settings/: curvesettings.hpp  settings.hpp
src/core/src/: coniscurve.cpp
src/core/src/conics/: conic.cpp  conicfitter.cpp
src/core/src/curve/: curve.cpp  curveloader.cpp  curvepresetfactory.cpp  curvesaver.cpp  curveutils.cpp  curveutils.hpp
src/core/src/curve/refinement/: normalrefiner.cpp
src/core/src/curve/subdivision/: conicsubdivider.cpp
src/core/src/util/: asyncrunner.cpp  asyncrunner.hpp
src/core/subdivision/: conicsubdivider.cpp  conicsubdivider.hpp  subdivider.hpp
src/core/test/: test_helpers.cpp  test_helpers.hpp
src/core/test/conics/: conic_test.cpp  conicfitter_test.cpp
src/core/test/core/conics/: conic_test.cpp  conicfitter_test.cpp
src/core/test/subdivision/: conicsubdivider_test.cpp
src/gui/: CMakeLists.txt  mainview.cpp  mainview.hpp  mainwindow.cpp  mainwindow.hpp  sceneview.cpp  sceneview.hpp  stylepresets.cpp  stylepresets.hpp  viewsettings.hpp
src/gui/renderers/: conicrenderer.cpp  conicrenderer.hpp  curvenetrenderer.cpp  curvenetrenderer.hpp  curverenderer.cpp  curverenderer.hpp  renderer.cpp  renderer.hpp  shadertypes.hpp
src/gui/renderers/util/: colormap.cpp
src/gui/resources/: resources.qrc
src/gui/resources/shaders/: conic.vert  curvature.geom  curvature.vert  dashed.vert
src/gui/resources/shaders/double/: curvature.geom  curvature.vert
src/gui/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  sceneview.cpp  sceneview.hpp  stylepresets.cpp  stylepresets.hpp  viewsettings.hpp
src/gui/src/renderers/: conicrenderer.cpp  conicrenderer.hpp  curvenetrenderer.cpp  curvenetrenderer.hpp  curverenderer.cpp  curverenderer.hpp  renderer.cpp  renderer.hpp  shadertypes.hpp
src/gui/src/util/: colormap.cpp  colormap.hpp  imgresourcereader.cpp
src/gui/util/: colormap.cpp  colormap.hpp  imgresourcereader.cpp  imgresourcereader.hpp
src/renderers/: curvenetrenderer.cpp  curvenetrenderer.h  curverenderer.cpp  (+3 more)
(+86 files in other folders)
