cmake_minimum_required(VERSION 3.9)

set(CONIC_VERSION_MAJOR 0)
set(CONIC_VERSION_MINOR 3)
set(CONIC_VERSION_PATCH 1)

set(CONIC_VERSION "${CONIC_VERSION_MAJOR}.${CONIC_VERSION_MINOR}.${CONIC_VERSION_PATCH}")

project(conis VERSION ${CONIC_VERSION} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
cmake_policy(SET CMP0079 NEW)
add_subdirectory(src/core)

option(LIBRARY_ONLY "Only builds the core library" OFF)
if(NOT LIBRARY_ONLY)
    add_subdirectory(src/gui)
endif()
